[package]
name = "hyperstate-utxos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bitcoin = { version = "0.31.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.0"
parking_lot = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.1"